--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -138,7 +138,7 @@ body { overflow-x: hidden; }
     font-size: 1.2rem;
 }
 
-.mj-photo { max-width: 450px; border-radius: 15px; }
+.mj-photo { max-width: 450px; width: 100%; border-radius: 15px; }
 
 .skill-sets {
     display: flex;
